        * TAO_IDL/be/be_visitor_sequence/any_op_cs.cpp:
        * TAO_IDL/be/be_visitor_sequence/sequence_ci.cpp:
        * TAO_IDL/be/be_visitor_structure/any_op_cs.cpp:
        * TAO_IDL/be/be_visitor_structure/structure_ci.cpp:
        * TAO_IDL/be/be_visitor_valuetype/any_op_cs.cpp:
        * TAO_IDL/be/be_visitor_valuetype/valuetype_ci.cpp:

	  Moved generation of Any template specializations 
	  to the inline file.

        * tao/Messaging/MessagingC.cpp:
        * tao/Messaging/MessagingC.i:
        * tao/Messaging/Messaging_No_ImplC.cpp:
        * tao/Messaging/Messaging_No_ImplC.i:
        * tao/Messaging/Messaging_RT_PolicyC.cpp:
        * tao/Messaging/Messaging_RT_PolicyC.i:
        * tao/Messaging/Messaging_SyncScope_PolicyC.cpp:
        * tao/Messaging/Messaging_SyncScope_PolicyC.i:
        * tao/PortableServer/PortableServerC.cpp:
        * tao/PortableServer/PortableServerC.h
        * tao/PortableServer/PortableServerC.i:
        * tao/RTCORBA/RTCORBAC.cpp:
        * tao/RTCORBA/RTCORBAC.i:

	  Fixed hand-crafted files corresponding to the changes
	  to the IDL compiler above.

        * tao/PortableServer/TAO_PortableServer.dsp:

	  Added missing files to project.

Tue Mar 25 14:06:58 2003  Ossama Othman  <ossama@uci.edu>

	* tao/ClientRequestInfo.h (sync_scope):
	* tao/ClientRequestInfo.cpp (sync_scope):
	* tao/ClientRequestInfo_i.h (sync_scope):
	* tao/ClientRequestInfo_i.cpp (sync_scope):

	  Do not protect this method with a "TAO_HAS_CORBA_MESSAGING"
	  preprocessor block.  Doing is no longer necessary since it
	  always possible to retrieve the SyncScope oneway setting.  This
	  problem only occurred recently, i.e. after the
	  PortableInterceptorC.* stub was regenerated.  Fixes builds where
	  CORBA messaging support is disabled.

Tue Mar 25 10:54:57 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/IORManipulation/IORC.h:

          Added include of Any_T.h needed for builds with inlining
          enabled.
